--- a/test/fixtures/courses.yml
+++ b/test/fixtures/courses.yml
@@ -6,6 +6,7 @@ one:
   prereqs: MyString
   description: MyString
   required: false
+  units: MyString
 
 two:
   number: MyString
@@ -13,3 +14,4 @@ two:
   prereqs: MyString
   description: MyString
   required: false
+  units: MyString
